[tool.poetry]
name = "Groot-Lindemann_brain_games"
version = "0.1.5"
description = "A simple game containted 5 steps with different task"
classifiers = [
    "Environment :: Console"
]
authors = ["Maxim <maxim.zeyfert@gmail.com>"]
repository = "https://test.pypi.org/simple/ groot-lindemann-brain-games"
packages = [
    { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

