[tool.poetry]
name = "zeyfert_brain_games"
version = "0.1.6"
description = "The applicaton contains 5 games based on logic and counting with numbers"
classifiers = [
    "Topic :: Games/Entertainment",
    "Environment :: Console",
]
authors = ["Maxim <maxim.zeyfert@gmail.com>"]
repository = "https://github.com/zeyfert/python-project-lvl1"
packages = [
    { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

